--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 
 ## -- BLOCK:license --
 ## -- BLOCK:license --
+## -- BLOCK:profile --
+## -- BLOCK:profile --
 ## -- BLOCK:sh --
 ## -- BLOCK:sh --
